feat : use Neanderthal lib for dummy-luno (> 1000 times faster)